# life

./: CMakeLists.txt  graphics.c  graphics.h  main.c  universe.c  universe.h
glad/: glad.c  glad.h
